МК-61 25.9.1
* Java 25, JavaFX 25
* Maven 3.9.11
* Различные оптимизации