@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright © 2025 Petr Panteleyev <petr@panteleyev.org>
+  Copyright © 2025 Petr Panteleyev
   SPDX-License-Identifier: BSD-2-Clause
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -9,7 +9,7 @@
 
     <groupId>org.panteleyev</groupId>
     <artifactId>mk61</artifactId>
-    <version>25.4.1</version>
+    <version>25.9.1</version>
     <packaging>jar</packaging>
     <name>MK-61</name>
 
@@ -30,10 +30,6 @@
 
                         <configuration>
                             <icon>icons/icon.ico</icon>
-                            <winMenu>true</winMenu>
-                            <winDirChooser>true</winDirChooser>
-                            <winUpgradeUuid>2574ee26-2d4b-4970-b074-821b3f77d0b9</winUpgradeUuid>
-                            <winMenuGroup>panteleyev.org</winMenuGroup>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -86,29 +82,29 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>24</maven.compiler.release>
+        <maven.compiler.release>25</maven.compiler.release>
         <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
         <appModule>mk</appModule>
         <appMainClass>org.panteleyev.mk61.Mk61Application</appMainClass>
         <timestamp>${maven.build.timestamp}</timestamp>
         <!-- Plugins -->
-        <mavenCleanPluginVersion>3.4.1</mavenCleanPluginVersion>
+        <mavenCleanPluginVersion>3.5.0</mavenCleanPluginVersion>
         <mavenResourcePluginVersion>3.3.1</mavenResourcePluginVersion>
-        <mavenCompilerPluginVersion>3.14.0</mavenCompilerPluginVersion>
+        <mavenCompilerPluginVersion>3.14.1</mavenCompilerPluginVersion>
         <mavenJarPluginVersion>3.4.2</mavenJarPluginVersion>
-        <mavenSurefirePluginVersion>3.5.3</mavenSurefirePluginVersion>
-        <mavenSurefireReportPluginVersion>3.5.3</mavenSurefireReportPluginVersion>
+        <mavenSurefirePluginVersion>3.5.4</mavenSurefirePluginVersion>
+        <mavenSurefireReportPluginVersion>3.5.4</mavenSurefireReportPluginVersion>
         <mavenDependencyPluginVersion>3.8.1</mavenDependencyPluginVersion>
         <mavenExecPluginVersion>3.5.0</mavenExecPluginVersion>
-        <jlinkMavenPluginVersion>1.1.0</jlinkMavenPluginVersion>
-        <jpackageMavenPluginVersion>1.6.6</jpackageMavenPluginVersion>
+        <jlinkMavenPluginVersion>1.2.0</jlinkMavenPluginVersion>
+        <jpackageMavenPluginVersion>1.7.1</jpackageMavenPluginVersion>
         <!-- Dependencies -->
-        <javaFxVersion>24.0.1</javaFxVersion>
+        <javaFxVersion>25</javaFxVersion>
         <controlsFxVersion>11.2.2</controlsFxVersion>
         <javaCommonsVersion>1.6.0</javaCommonsVersion>
         <javaFxHelpersVersion>1.21.0</javaFxHelpersVersion>
         <javaFreeDesktopVersion>0.5.1</javaFreeDesktopVersion>
-        <jUnitVersion>5.12.1</jUnitVersion>
+        <jUnitVersion>5.13.1</jUnitVersion>
     </properties>
 
     <dependencies>
@@ -232,9 +228,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--
-                Remove empty JavaFX jars to enable jlink
-            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -252,9 +245,7 @@
                                 <fileset>
                                     <directory>${project.build.directory}/jmods</directory>
                                     <includes>
-                                        <include>javafx-base-${javaFxVersion}.jar</include>
-                                        <include>javafx-controls-${javaFxVersion}.jar</include>
-                                        <include>javafx-graphics-${javaFxVersion}.jar</include>
+                                        <include>javafx-*</include>
                                     </includes>
                                 </fileset>
                             </filesets>
@@ -270,6 +261,8 @@
                     <output>${project.build.directory}/jlink</output>
                     <modulePaths>
                         <modulePath>${project.build.directory}/jmods</modulePath>
+                        <!--suppress UnresolvedMavenProperty -->
+                        <modulePath>${JAVAFX_JMODS}</modulePath>
                     </modulePaths>
                     <addModules>
                         <addModule>${appModule}</addModule>
@@ -277,7 +270,7 @@
                     <noHeaderFiles>true</noHeaderFiles>
                     <noManPages>true</noManPages>
                     <stripDebug>true</stripDebug>
-                    <generateCdsArchive>true</generateCdsArchive>
+                    <generateCdsArchive>false</generateCdsArchive>
                 </configuration>
             </plugin>
             <plugin>
@@ -289,18 +282,22 @@
                     <appVersion>${project.version}</appVersion>
                     <vendor>panteleyev.org</vendor>
                     <module>${appModule}/${appMainClass}</module>
-                    <modulePaths>
-                        <modulePath>target/jmods</modulePath>
-                    </modulePaths>
-                    <destination>target/dist</destination>
+                    <runtimeImage>${project.build.directory}/jlink</runtimeImage>
+                    <destination>${project.build.directory}/dist</destination>
                     <removeDestination>true</removeDestination>
                     <javaOptions>
-                        <javaOption>-XX:NewRatio=1</javaOption>
-                        <javaOption>-Xms100m</javaOption>
-                        <javaOption>-Xmx100m</javaOption>
-                        <javaOption>--enable-native-access=javafx.graphics</javaOption>
-                        <javaOption>--sun-misc-unsafe-memory-access=allow</javaOption>
+                        <option>-XX:NewRatio=1</option>
+                        <option>-Xms100m</option>
+                        <option>-Xmx100m</option>
+                        <option>-XX:+UseCompactObjectHeaders</option>
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>--sun-misc-unsafe-memory-access=allow</option>
                     </javaOptions>
+                    <!-- Windows -->
+                    <winDirChooser>true</winDirChooser>
+                    <winMenu>true</winMenu>
+                    <winUpgradeUuid>2574ee26-2d4b-4970-b074-821b3f77d0b9</winUpgradeUuid>
+                    <winMenuGroup>panteleyev.org</winMenuGroup>
                 </configuration>
             </plugin>
             <plugin>
@@ -321,6 +318,7 @@
                                 <argument>-XX:NewRatio=1</argument>
                                 <argument>-Xms100m</argument>
                                 <argument>-Xmx100m</argument>
+                                <argument>-XX:+UseCompactObjectHeaders</argument>
                                 <argument>--enable-native-access=javafx.graphics</argument>
                                 <argument>--sun-misc-unsafe-memory-access=allow</argument>
                                 <argument>--module-path</argument>
@@ -340,6 +338,7 @@
                                 <argument>-XX:NewRatio=1</argument>
                                 <argument>-Xms100m</argument>
                                 <argument>-Xmx100m</argument>
+                                <argument>-XX:+UseCompactObjectHeaders</argument>
                                 <argument>--enable-native-access=javafx.graphics</argument>
                                 <argument>--sun-misc-unsafe-memory-access=allow</argument>
                                 <!--suppress UnresolvedMavenProperty -->
